Created Pytorch Model

--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPF4Qrz+UNEOWwCdDV6wusr",
+      "authorship_tag": "ABX9TyM9G4hd+fBUpMs405PSQyas",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,9 +65,9 @@
           "height": 35
         },
         "id": "q5d0xdVfz8rK",
-        "outputId": "5a91ea7c-8cd8-45f6-9829-7ec58c1891ad"
+        "outputId": "d4a3b56d-e31f-4c56-c849-39d7b989e69e"
       },
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -80,7 +80,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 4
         }
       ]
     },
@@ -123,9 +123,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vumodyco1mzU",
-        "outputId": "1f6b1556-e9cf-4d5f-9202-a55127a55d29"
+        "outputId": "ec385c12-fff6-4918-bdb9-3a5206c35179"
       },
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -154,7 +154,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 5
         }
       ]
     },
@@ -168,9 +168,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HLWAPGlp7N5Q",
-        "outputId": "b6adfafd-ebf1-4121-b79e-4e122a1f6ed7"
+        "outputId": "7eeb0eea-32fe-4eb4-938f-cf59c559f49c"
       },
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -180,7 +180,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 6
         }
       ]
     },
@@ -200,9 +200,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d1187fc5-1f16-436f-a1c1-e96a0514a62f"
+        "outputId": "9e63b864-abb3-4bb3-ef26-bba8f92e6135"
       },
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -212,7 +212,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 7
         }
       ]
     },
@@ -225,7 +225,7 @@
         "                     test_level=y_test,\n",
         "                     predictions = None):\n",
         "  \"\"\"\n",
-        "  This is the major thing\n",
+        "  This is the training, test and predictions\n",
         "  \"\"\"\n",
         "  plt.figure(figsize=(10,7))\n",
         "  #plot training data into Blue\n",
@@ -247,9 +247,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 599
         },
-        "outputId": "4425100d-d293-4179-b2b7-244f18eef5b3"
+        "outputId": "c606589e-06d2-4541-f877-d986f56e3a88"
       },
-      "execution_count": 16,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -262,6 +262,44 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###2. Building Pytorch Model\n",
+        "Two main algorithms:\n",
+        "* Gradiant Descent\n",
+        "* Backpropagation\n"
+      ],
+      "metadata": {
+        "id": "4qmMmnXuzUXd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from torch import nn\n",
+        "\n",
+        "#Creating linear regression model\n",
+        "class LinearRegressionModel(nn.Module):\n",
+        "  def __init__(self):\n",
+        "    super().__init__()\n",
+        "    self.weights = nn.Parameter(torch.randn(1,\n",
+        "                requires_grad= True,\n",
+        "                dtype=torch.float))\n",
+        "    self.bias= nn.parameter(torch.randn(1,\n",
+        "              requires_grad = True,\n",
+        "              dtype=torch.float))\n",
+        "\n",
+        "# Model for the computation\n",
+        "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
+        "      return self.weights *x + self.bias\n"
+      ],
+      "metadata": {
+        "id": "GGSHzSEqzsmV"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
