Parameter model building essentials

--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM9G4hd+fBUpMs405PSQyas",
+      "authorship_tag": "ABX9TyMbQGuLXRzFmys9xemoSZe+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -298,8 +298,22 @@
       "metadata": {
         "id": "GGSHzSEqzsmV"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Pytorch Model Building Methods\n",
+        "* torch.nn : used for the generation computational graphs\n",
+        "* torch.nn.Parameter : trained and learned parameter\n",
+        "* torch.nn.Module: It is the main model for neural next\n",
+        "* torch.optim: It is used for optimization\n",
+        "* def forward() : Used to calculate forward parameters"
+      ],
+      "metadata": {
+        "id": "sDkiHcku5_S7"
+      }
     }
   ]
 }
