Model Building Classes

--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMbQGuLXRzFmys9xemoSZe+",
+      "authorship_tag": "ABX9TyPEBWwyKyNNH5hBgSPFvRyx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,9 +65,9 @@
           "height": 35
         },
         "id": "q5d0xdVfz8rK",
-        "outputId": "d4a3b56d-e31f-4c56-c849-39d7b989e69e"
+        "outputId": "36f3d81e-288d-4f35-8a6f-11b2bf0bd76a"
       },
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -80,7 +80,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 1
         }
       ]
     },
@@ -123,9 +123,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vumodyco1mzU",
-        "outputId": "ec385c12-fff6-4918-bdb9-3a5206c35179"
+        "outputId": "e73cc152-4238-4091-fdd0-14031fb96552"
       },
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -154,7 +154,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 2
         }
       ]
     },
@@ -168,9 +168,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HLWAPGlp7N5Q",
-        "outputId": "7eeb0eea-32fe-4eb4-938f-cf59c559f49c"
+        "outputId": "a14c13e8-fc60-4669-c3df-37989ef3e4c5"
       },
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -180,7 +180,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 3
         }
       ]
     },
@@ -200,9 +200,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9e63b864-abb3-4bb3-ef26-bba8f92e6135"
+        "outputId": "091d4f1d-1a89-4c99-fd77-eb6e756a5fe3"
       },
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -212,7 +212,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 4
         }
       ]
     },
@@ -247,9 +247,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 599
         },
-        "outputId": "c606589e-06d2-4541-f877-d986f56e3a88"
+        "outputId": "6a429471-c365-4682-83c3-ba23073f615d"
       },
-      "execution_count": 8,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -298,7 +298,7 @@
       "metadata": {
         "id": "GGSHzSEqzsmV"
       },
-      "execution_count": 9,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -309,11 +309,22 @@
         "* torch.nn.Parameter : trained and learned parameter\n",
         "* torch.nn.Module: It is the main model for neural next\n",
         "* torch.optim: It is used for optimization\n",
-        "* def forward() : Used to calculate forward parameters"
+        "* def forward() : Used to calculate forward parameters\n",
+        "* torch.utils.data.Dataset : Map between label and features\n",
+        "* torch.utils.data.Dataloader: help to iterate with your own dataset\n"
       ],
       "metadata": {
         "id": "sDkiHcku5_S7"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "JhY-8I374Mkt"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
