Checking out the internals

--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPEBWwyKyNNH5hBgSPFvRyx",
+      "authorship_tag": "ABX9TyPNPCMspG+IPUZNtXsdaq/w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,7 +67,7 @@
         "id": "q5d0xdVfz8rK",
         "outputId": "36f3d81e-288d-4f35-8a6f-11b2bf0bd76a"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -125,7 +125,7 @@
         "id": "Vumodyco1mzU",
         "outputId": "e73cc152-4238-4091-fdd0-14031fb96552"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -170,7 +170,7 @@
         "id": "HLWAPGlp7N5Q",
         "outputId": "a14c13e8-fc60-4669-c3df-37989ef3e4c5"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -202,7 +202,7 @@
         },
         "outputId": "091d4f1d-1a89-4c99-fd77-eb6e756a5fe3"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -249,7 +249,7 @@
         },
         "outputId": "6a429471-c365-4682-83c3-ba23073f615d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -298,7 +298,7 @@
       "metadata": {
         "id": "GGSHzSEqzsmV"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -318,13 +318,30 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "### Checking out the internals\n",
+        "1.  get data ready\n",
+        "    * torchvision.transforms\n",
+        "    * torch.utils.data.Dataset\n",
+        "    * torch.utils.data.DataLoader\n",
+        "2.  Build or pick the pretrained model\n",
+        "    * torchvision.models\n",
+        "    * torch.nn\n",
+        "    * torch.nn.Module\n",
+        "  2.1 Pick a lossfunction and optimizer\n",
+        "    * torch.optim\n",
+        "  2.2 Build a training Loop\n",
+        "3.  Fit the model to the data and make predictions\n",
+        "4.  Evaluate the model\n",
+        "    * torchmatrix\n",
+        "5.  improve through experimentation\n",
+        "    * torch.utils.tensorboard\n",
+        "6.  Save and reload your pretrained model"
+      ],
       "metadata": {
         "id": "JhY-8I374Mkt"
-      },
-      "execution_count": null,
-      "outputs": []
+      }
     }
   ]
 }
