Make prediction with random model torch.inference_mode()

--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNJQLpBT+3gIjMx9+LogFR/",
+      "authorship_tag": "ABX9TyOJ8+mcy9shK58Fi4tuCoN1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,9 +65,9 @@
           "height": 35
         },
         "id": "q5d0xdVfz8rK",
-        "outputId": "36f3d81e-288d-4f35-8a6f-11b2bf0bd76a"
+        "outputId": "727eb786-b7e3-469b-e8d1-dcdf38d917ea"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -80,7 +80,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 10
         }
       ]
     },
@@ -123,9 +123,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vumodyco1mzU",
-        "outputId": "e73cc152-4238-4091-fdd0-14031fb96552"
+        "outputId": "d270b448-87d3-4fa4-eae2-afc6e8aa1875"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -154,7 +154,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 11
         }
       ]
     },
@@ -168,9 +168,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HLWAPGlp7N5Q",
-        "outputId": "a14c13e8-fc60-4669-c3df-37989ef3e4c5"
+        "outputId": "0148354e-c93e-4011-de9b-0d780e514cde"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -180,7 +180,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 12
         }
       ]
     },
@@ -200,9 +200,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "091d4f1d-1a89-4c99-fd77-eb6e756a5fe3"
+        "outputId": "bf1518e6-84d8-49de-8a9e-0d0bb182f306"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -212,7 +212,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 13
         }
       ]
     },
@@ -247,9 +247,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 599
         },
-        "outputId": "6a429471-c365-4682-83c3-ba23073f615d"
+        "outputId": "765d4b5c-f6d4-4031-c71a-7209f9dfa181"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -278,6 +278,7 @@
     {
       "cell_type": "code",
       "source": [
+        "import torch\n",
         "from torch import nn\n",
         "\n",
         "#Creating linear regression model\n",
@@ -285,11 +286,11 @@
         "  def __init__(self):\n",
         "    super().__init__()\n",
         "    self.weights = nn.Parameter(torch.randn(1,\n",
-        "                requires_grad= True,\n",
-        "                dtype=torch.float))\n",
-        "    self.bias= nn.parameter(torch.randn(1,\n",
-        "              requires_grad = True,\n",
-        "              dtype=torch.float))\n",
+        "                          requires_grad= True,\n",
+        "                          dtype=torch.float))\n",
+        "    self.bias= nn.Parameter(torch.randn(1,\n",
+        "                      requires_grad = True,\n",
+        "                      dtype=torch.float))\n",
         "\n",
         "# Model for the computation\n",
         "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
@@ -298,7 +299,7 @@
       "metadata": {
         "id": "GGSHzSEqzsmV"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -344,10 +345,108 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Checking the content of pytorch model\n"
+      ],
+      "metadata": {
+        "id": "lXq554KQOnfj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Creating seed\n",
+        "torch.manual_seed(42)\n",
+        "\n",
+        "#creating instance of regression model\n",
+        "model_0 = LinearRegressionModel()\n",
+        "\n",
+        "#representing the model\n",
+        "\n",
+        "list(model_0.parameters())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mvty8noPMPlj",
+        "outputId": "bcbf92d6-13c5-4029-c7a4-8fa89ab2d8b2"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Parameter containing:\n",
+              " tensor([0.3367], requires_grad=True),\n",
+              " Parameter containing:\n",
+              " tensor([0.1288], requires_grad=True)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model_0.state_dict()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DV2lXE8DPiAw",
+        "outputId": "b8a2a894-85f1-42c7-df6e-d172160ab5de"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "OrderedDict([('weights', tensor([0.3367])), ('bias', tensor([0.1288]))])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "weight, bias"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Xn-bwkwTPotx",
+        "outputId": "aa5ec2ee-bf45-4f21-d331-9f066209b4e8"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0.7, 0.3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "lXq554KQOnfj"
+        "id": "Tpq1DGj9P-7E"
       },
       "execution_count": null,
       "outputs": []
