--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNXERB250opvX5UGiQVuQzG",
+      "authorship_tag": "ABX9TyPv9733aGeO7NntR8sd94lu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -560,10 +560,59 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Train Model\n",
+        "\n",
+        "It is all about making wrong pridiction towards right prediction or prediction the data from unpredicted data.\n",
+        "Making the weak or poor representation towards strong representation\n",
+        "For this loss function and optimizer is used:\n",
+        "* **Loss Function**: It is used to represent how poor or wrong the representation is. Lower the loss function better the prediction.\n",
+        "* **Optimizer** : It is used to reduce the loss by optimizing the parameters of the model\n",
+        "\n",
+        "In pytorch we need:\n",
+        "* Training Loop\n",
+        "* Testing Loop\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ePCL5jpHclaE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(model_0.parameters())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C1mfNfpii46I",
+        "outputId": "144e3d8c-6833-49be-d79b-225db0f5b974"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Parameter containing:\n",
+              " tensor([0.3367], requires_grad=True),\n",
+              " Parameter containing:\n",
+              " tensor([0.1288], requires_grad=True)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "ePCL5jpHclaE"
+        "id": "69iYem-AjEu0"
       },
       "execution_count": null,
       "outputs": []
