Setting up Loss function and Optimizer

--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPv9733aGeO7NntR8sd94lu",
+      "authorship_tag": "ABX9TyM5a0W8VaDOmxzsnz0i9+eB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,7 +65,7 @@
           "height": 35
         },
         "id": "q5d0xdVfz8rK",
-        "outputId": "ca2381a4-60ee-461d-957e-9a2a886c89d8"
+        "outputId": "da30ebce-943f-4df6-8ee0-dc09c972e52d"
       },
       "execution_count": 1,
       "outputs": [
@@ -123,7 +123,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vumodyco1mzU",
-        "outputId": "6e10b9a8-497b-45e7-d42b-a7bc5d9f144f"
+        "outputId": "01f39c09-4ef9-48c5-aba3-bba5ed88b6fa"
       },
       "execution_count": 2,
       "outputs": [
@@ -168,7 +168,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HLWAPGlp7N5Q",
-        "outputId": "950ee59e-605b-41f3-81b4-914f6cd21cd6"
+        "outputId": "54c4954a-d84e-449e-f36b-b490866079ae"
       },
       "execution_count": 3,
       "outputs": [
@@ -200,7 +200,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b1fa2efb-71c8-4eb3-e101-5908b55d310d"
+        "outputId": "944022f1-7768-4cd7-b5e1-72e96930e4ea"
       },
       "execution_count": 4,
       "outputs": [
@@ -247,7 +247,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 599
         },
-        "outputId": "3bef7692-1fa2-4999-ef4e-2edb64a2366e"
+        "outputId": "9987bfbd-7527-4a9a-822a-9fab5ec64bcd"
       },
       "execution_count": 5,
       "outputs": [
@@ -331,8 +331,8 @@
         "    * torch.nn\n",
         "    * torch.nn.Module\n",
         "  2.1 Pick a lossfunction and optimizer\n",
-        "    * torch.optim\n",
-        "  2.2 Build a training Loop\n",
+        "    * torch.optim #Inside optimizer two things are places params and lr.\n",
+        "    params takes model_0.parameters() and lr is the rate how large or small the optimizer change the parameter with each step.\n",
         "3.  Fit the model to the data and make predictions\n",
         "4.  Evaluate the model\n",
         "    * torchmatrix\n",
@@ -371,7 +371,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mvty8noPMPlj",
-        "outputId": "b6777623-ff75-4883-d537-9a36c9afe40f"
+        "outputId": "c4619a51-6ff2-432d-a34e-8ea4a4ee8a37"
       },
       "execution_count": 7,
       "outputs": [
@@ -400,7 +400,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DV2lXE8DPiAw",
-        "outputId": "cf66e65d-f697-434c-b038-d146de8fbf02"
+        "outputId": "154648c4-c330-4f1b-bfcf-232eeb0abd34"
       },
       "execution_count": 8,
       "outputs": [
@@ -426,7 +426,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xn-bwkwTPotx",
-        "outputId": "1586bb52-f205-4346-92c6-73ba3387164e"
+        "outputId": "4435aec4-c24e-4c36-c41b-0830cf3c4c43"
       },
       "execution_count": 9,
       "outputs": [
@@ -472,9 +472,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6ulzdIAsZ3ng",
-        "outputId": "955a0331-f65c-4e24-f94e-b7da55f4bdbc"
+        "outputId": "00a894f1-cb18-4e63-e422-d8708d22f5ba"
       },
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -493,7 +493,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 10
         }
       ]
     },
@@ -507,9 +507,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FXsz4YJdaYM8",
-        "outputId": "60ab729e-e818-4345-e23e-6ef004e73a49"
+        "outputId": "3c577efa-6058-4fe5-a5b5-4fa9a4e5f5ee"
       },
-      "execution_count": 15,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -528,7 +528,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 11
         }
       ]
     },
@@ -543,9 +543,9 @@
           "height": 599
         },
         "id": "Jffip9CLcTgU",
-        "outputId": "4172eb70-22a7-478e-8ca4-a1ba0e2fc550"
+        "outputId": "1416827d-f83d-4898-a9c8-e400a5690be8"
       },
-      "execution_count": 16,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -589,9 +589,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C1mfNfpii46I",
-        "outputId": "144e3d8c-6833-49be-d79b-225db0f5b974"
+        "outputId": "26c07ecd-2b94-487d-8f63-b1293f4f04af"
       },
-      "execution_count": 18,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -604,15 +604,66 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 13
         }
       ]
     },
     {
       "cell_type": "code",
+      "source": [
+        "model_0.state_dict()"
+      ],
+      "metadata": {
+        "id": "69iYem-AjEu0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e829f372-8322-4340-f2ba-4a87e716b4fc"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "OrderedDict([('weights', tensor([0.3367])), ('bias', tensor([0.1288]))])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "#loss function setup\n",
+        "loss_fn = nn.L1Loss()\n",
+        "#Optimizing function setup\n",
+        "Optimizer = torch.optim.SGD(params = model_0.parameters(), lr=0.01)"
+      ],
+      "metadata": {
+        "id": "qFrmoz3nr0I_"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# For the regression problem use nn.L1Loss and torch.optim.SGD()\n",
+        "# For the clssification problem use nn.BCELoss()"
+      ],
+      "metadata": {
+        "id": "5WFwlGO7ui5u"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "69iYem-AjEu0"
+        "id": "k9GkJyoXu4Xd"
       },
       "execution_count": null,
       "outputs": []
