Building training and testing loop in Pytorch

--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM5a0W8VaDOmxzsnz0i9+eB",
+      "authorship_tag": "ABX9TyN1ib7eTQemmdTnDl+9I49p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -652,21 +652,29 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# For the regression problem use nn.L1Loss and torch.optim.SGD()\n",
-        "# For the clssification problem use nn.BCELoss()"
+        "* For the regression problem use nn.L1Loss and torch.optim.SGD()\n",
+        "* For the clssification problem use nn.BCELoss()\n"
       ],
       "metadata": {
         "id": "5WFwlGO7ui5u"
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "##Building Training and Testing Loop in Pythorch\n",
+        "Couple of things we need in the training loop\n",
+        "\n",
+        "1.  Loop through the data\n",
+        "2.  Forward Propagation(Loop the data thorugh the model and make predictions)\n",
+        "3.  Loss calculation\n",
+        "4.  Optimize zero grad\n",
+        "5.  Loss Backward: Backward Propagation\n",
+        "6.  Optimizer step : Use the model and optimize the the parameters to try and improve the loss() **Gradiant Descent**"
+      ],
       "metadata": {
         "id": "k9GkJyoXu4Xd"
-      },
-      "execution_count": null,
-      "outputs": []
+      }
     }
   ]
 }
