Pytorch training Loop

--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyN1ib7eTQemmdTnDl+9I49p",
+      "authorship_tag": "ABX9TyMAczCYMIVcZjPAbqXMHP/u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,7 +65,7 @@
           "height": 35
         },
         "id": "q5d0xdVfz8rK",
-        "outputId": "da30ebce-943f-4df6-8ee0-dc09c972e52d"
+        "outputId": "9f9a603c-bee9-4746-9455-5a1daef01807"
       },
       "execution_count": 1,
       "outputs": [
@@ -123,7 +123,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vumodyco1mzU",
-        "outputId": "01f39c09-4ef9-48c5-aba3-bba5ed88b6fa"
+        "outputId": "47f5f577-5f53-4545-991c-164738a073ec"
       },
       "execution_count": 2,
       "outputs": [
@@ -168,7 +168,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HLWAPGlp7N5Q",
-        "outputId": "54c4954a-d84e-449e-f36b-b490866079ae"
+        "outputId": "eb75f896-20d2-4976-8c81-878b5f3e538d"
       },
       "execution_count": 3,
       "outputs": [
@@ -200,7 +200,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "944022f1-7768-4cd7-b5e1-72e96930e4ea"
+        "outputId": "7c289e7a-9588-4702-cc57-f2097ee5358c"
       },
       "execution_count": 4,
       "outputs": [
@@ -247,7 +247,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 599
         },
-        "outputId": "9987bfbd-7527-4a9a-822a-9fab5ec64bcd"
+        "outputId": "c78cf938-b1ca-4df3-c1fd-c03a65a21ba7"
       },
       "execution_count": 5,
       "outputs": [
@@ -371,7 +371,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mvty8noPMPlj",
-        "outputId": "c4619a51-6ff2-432d-a34e-8ea4a4ee8a37"
+        "outputId": "70d419d5-4b52-46e1-a6ec-62a3e5c41776"
       },
       "execution_count": 7,
       "outputs": [
@@ -400,7 +400,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DV2lXE8DPiAw",
-        "outputId": "154648c4-c330-4f1b-bfcf-232eeb0abd34"
+        "outputId": "e86842a9-f425-45c1-973b-47bc8e0b814e"
       },
       "execution_count": 8,
       "outputs": [
@@ -426,7 +426,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xn-bwkwTPotx",
-        "outputId": "4435aec4-c24e-4c36-c41b-0830cf3c4c43"
+        "outputId": "d08af026-06f9-4805-b3d2-772899529017"
       },
       "execution_count": 9,
       "outputs": [
@@ -472,7 +472,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6ulzdIAsZ3ng",
-        "outputId": "00a894f1-cb18-4e63-e422-d8708d22f5ba"
+        "outputId": "dd377d92-df02-401c-d639-0718528513e3"
       },
       "execution_count": 10,
       "outputs": [
@@ -507,7 +507,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FXsz4YJdaYM8",
-        "outputId": "3c577efa-6058-4fe5-a5b5-4fa9a4e5f5ee"
+        "outputId": "7ba008a5-698c-42ff-f1b3-c53e69bb281a"
       },
       "execution_count": 11,
       "outputs": [
@@ -543,7 +543,7 @@
           "height": 599
         },
         "id": "Jffip9CLcTgU",
-        "outputId": "1416827d-f83d-4898-a9c8-e400a5690be8"
+        "outputId": "ee11a514-b0d1-4130-912c-45467db70c2d"
       },
       "execution_count": 12,
       "outputs": [
@@ -589,7 +589,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C1mfNfpii46I",
-        "outputId": "26c07ecd-2b94-487d-8f63-b1293f4f04af"
+        "outputId": "a38ba849-b7f0-4d10-8f1f-e7a25096d68e"
       },
       "execution_count": 13,
       "outputs": [
@@ -618,9 +618,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e829f372-8322-4340-f2ba-4a87e716b4fc"
+        "outputId": "21838d58-c811-443a-d5f3-16d8fe663965"
       },
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -630,7 +630,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 14
         }
       ]
     },
@@ -646,7 +646,7 @@
       "metadata": {
         "id": "qFrmoz3nr0I_"
       },
-      "execution_count": 16,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -675,6 +675,59 @@
       "metadata": {
         "id": "k9GkJyoXu4Xd"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "epochs =1\n",
+        "for epoch in range(epochs):\n",
+        "  # Set the model in training mode\n",
+        "  model_0.train()\n",
+        "\n",
+        "  #1. Forward pass\n",
+        "  y_pred = model_0(X_train)\n",
+        "  #2. loss Calculation\n",
+        "  loss = loss_fn(y_pred, y_train)\n",
+        "  #3. Optimize zero grad\n",
+        "  optimizer.zero_grad()\n",
+        "  #4. Back Propagation\n",
+        "  loss.backward()\n",
+        "  #5.  step the Optimizer (gradiant descent)\n",
+        "  optimizer.step()\n",
+        "  #Turn off gradiant tracking\n",
+        "  model_0.eval()"
+      ],
+      "metadata": {
+        "id": "2-svv9d33Unc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 245
+        },
+        "outputId": "e88df4c5-2d01-4cac-92ef-f7669d44a40d"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-16-db266446dd5d>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0;31m#1. Forward pass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m   \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_0\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m   \u001b[0;31m#2. loss Calculation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m   \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mloss_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'X_train' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2RoOQ21igF2O"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
